bug: fixed button menu hamburger on safari or ios

--- a/css/style.css
+++ b/css/style.css
@@ -248,12 +248,22 @@ select {
     height: 100%;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 11;
     border-right: 1px solid #e8dfec;
-    padding: 30px;
+    /* padding: 30px; */
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
-    overflow-y: auto;
+    /* overflow-y: auto; */
+}
+
+.aside .aside-inner{
+    position: absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    padding:30px;
+    overflow-y:auto;
 }
 
 .aside .logo {
